Fixed line height to make things more readable

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -45,7 +45,6 @@
 .font-size(@size) {
   font-size: 0px + @size;
   font-size: 0rem + @size / @doc-font-size;
-  line-height: 0 + round(@doc-line-height / @size*10000) / 10000;
   margin-bottom: 0px + @doc-line-height;
   margin-bottom: 0rem + (@doc-line-height / @doc-font-size);
 }
@@ -62,7 +61,6 @@
 .font(@size) {
   font-size: 0px + @size;
   font-size: 0rem + @size / @doc-font-size;
-  line-height: 0 + round(@doc-line-height / @size*10000) / 10000;
 }
 
 .text-overflow() {
