--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -296,6 +296,9 @@ body {
 			color: @white;
 			.text-shadow(0 1px 2px rgba(0,0,0,.25));
 		}
+        h1{
+            line-height: 1;
+        }
 	}
 }
 .byline {
@@ -408,6 +411,9 @@ body {
 	li > a.reversefootnote {
 		border-bottom-width: 0;
 	}
+    p{
+        line-height: 1.5;
+    }
 }
 .toc {
 	display: none;
